simplify string check

--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -26,7 +26,7 @@
     - log-unattended
 
 - name: Metrics port
-  when: metrics_port | length > 0
+  when: metrics_port
   ansible.builtin.import_tasks: metrics.yaml
   tags:
     - metrics
