--- a/playbooks/roles/info_tor/tasks/bridgeline.yaml
+++ b/playbooks/roles/info_tor/tasks/bridgeline.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Get certificate
-  when: bridge_distribution | length > 0
+  when: bridge_distribution
   changed_when: false
   ansible.builtin.shell:
     cmd: |-
