--- a/playbooks/roles/info_tor/tasks/version.yaml
+++ b/playbooks/roles/info_tor/tasks/version.yaml
@@ -15,7 +15,7 @@
 
 - name: Proxy version
   changed_when: false
-  when: bridge_distribution | length > 0
+  when: bridge_distribution
   ansible.builtin.shell:
     cmd: |-
       (
