--- a/playbooks/roles/setup_tor/tasks/firewall-bridge.yaml
+++ b/playbooks/roles/setup_tor/tasks/firewall-bridge.yaml
@@ -2,7 +2,7 @@
 - name: DDoS of obfs4 port
   changed_when: _ddos_obfs4_rules.stdout_lines | length > 0
   vars:
-    _max: "{{ (bridge_distribution | length > 0) | ternary(3, 9) }}"
+    _max: "{{ bridge_distribution | ternary(3, 9) }}"
     _ipt4_common: "--xxx INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --dport {{ tor_port }}"
     _ipt6_common: "--xxx INPUT -p tcp --dst {{ ansible_facts.default_ipv6.address }} --dport {{ tor_port }}"
     _hash_limit: "--hashlimit-mode srcip,dstport --hashlimit-above {{ _max }}/minute --hashlimit-burst 1 --hashlimit-htable-expire {{ 2 * 60 * 1000 }} -j DROP"
@@ -10,6 +10,7 @@
     cmd: |-
       set -euf
 
+      # replace the placeholder with the appropriate action and create the rule if it is not already there
       if ! {{ item | regex_replace(' --xxx ', ' -C ') }} 2>/dev/null; then
         {{ item | regex_replace(' --xxx ', ' -v -A ') }}
       fi
