--- a/playbooks/roles/info_tor/tasks/fingerprints.yaml
+++ b/playbooks/roles/info_tor/tasks/fingerprints.yaml
@@ -23,10 +23,10 @@
         _fingerprint_ed25519: "{{ _result.stdout_lines[0] }}"
 
 - name: Hashed fingerprint
-  when: bridge_distribution | length > 0
+  when: bridge_distribution
   block:
     - name: Get hashed fingerprint
-      when: bridge_distribution | length > 0
+      when: bridge_distribution
       changed_when: false
       ansible.builtin.command: cut -f 2 -d ' ' /var/lib/tor/hashed-fingerprint
       register: _result
