--- a/playbooks/roles/info_tor/tasks/wellknown.yaml
+++ b/playbooks/roles/info_tor/tasks/wellknown.yaml
@@ -2,7 +2,7 @@
 # https://github.com/nusenu/ContactInfo-Information-Sharing-Specification
 
 - name: Wellknown for bridges
-  when: bridge_distribution | length > 0
+  when: bridge_distribution
   delegate_to: localhost
   throttle: 1
   block:
@@ -18,7 +18,7 @@
         insertafter: "^# {{ inventory_hostname }}\n"
 
 - name: Wellknown for server
-  when: bridge_distribution | length == 0
+  when: not bridge_distribution
   delegate_to: localhost
   throttle: 1
   block:
