--- a/playbooks/roles/setup/tasks/validate.yaml
+++ b/playbooks/roles/setup/tasks/validate.yaml
@@ -6,14 +6,14 @@
       - "ansible_facts.distribution == 'Debian'"
 
 - name: Validate metrics_port
-  when: metrics_port | length > 0
+  when: metrics_port
   ansible.builtin.assert:
     quiet: true
     that:
       - "(metrics_port | int > 0) and (metrics_port | int < 2**16)"
 
 - name: Validate prometheus_server
-  when: prometheus_server | length > 0
+  when: prometheus_server
   ansible.builtin.assert:
     quiet: true
     that:
@@ -21,7 +21,7 @@
   loop: "{{ prometheus_server | split(',') }}"
 
 - name: Validate RAM for kernel src
-  when: kernel_git_version | length > 0
+  when: kernel_git_version
   ansible.builtin.assert:
     quiet: true
     that:
