--- a/playbooks/roles/setup_tor/defaults/main.yaml
+++ b/playbooks/roles/setup_tor/defaults/main.yaml
@@ -18,7 +18,7 @@ tor_metrics: false
 bridge_distribution: "none"
 
 # for server specific firewall
-_has_remote_service: "{{ (metrics_port | length > 0) and (prometheus_server | length > 0) }}"
+_has_remote_service: "{{ metrics_port and prometheus_server }}"
 add_remote_service: '{{ _has_remote_service | ternary(''ADD_REMOTE_SERVICES="'' + prometheus_server + ''>'' + metrics_port + ''"'', '''') }}'
 
 my_family: "{{ lookup('ansible.builtin.file', '~/tmp/rsa-fingerprint.txt', errors='ignore') | regex_replace('#.*\n', '') | replace('\n', ',') }}"
