--- a/playbooks/roles/setup_tor/tasks/validate.yaml
+++ b/playbooks/roles/setup_tor/tasks/validate.yaml
@@ -13,3 +13,10 @@
       - "ansible_facts.default_ipv6.address is defined"
       - "ansible_facts.default_ipv6.address is not match('fe80::')"
       - "ansible_facts.default_ipv6.address is not search('::1$')"
+
+- name: Validate metrics_port
+  when: metrics_port
+  ansible.builtin.assert:
+    quiet: true
+    that:
+      - "metrics_port != tor_port"
