--- a/playbooks/roles/info_tor/tasks/log-warn.yaml
+++ b/playbooks/roles/info_tor/tasks/log-warn.yaml
@@ -8,6 +8,6 @@
   register: _result
 
 - name: Results of log-warn {{ log_lines }} last lines
-  when: _result.stdout_lines | length > 0
+  when: _result.stdout_lines
   ansible.builtin.debug:
     var: _result.stdout_lines
