--- a/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
@@ -11,7 +11,6 @@
     force: true
     depth: 1
     single_branch: true
-  register: _repo_snowflake
 
 - name: Apply patches
   changed_when: _snowflake_patched.stdout_lines is search('patching file ')
@@ -25,12 +24,11 @@
 
 - name: Build
   changed_when: false
-  when: _repo_snowflake.changed or _snowflake_patched.changed
   ansible.builtin.command:
-    cmd: go build
+    cmd: go build -v
     chdir: /root/snowflake/proxy
 
-- name: Install
+- name: Copy
   ansible.builtin.copy:
     src: /root/snowflake/proxy/proxy
     dest: /usr/bin/snowflake-proxy
