--- a/playbooks/roles/setup_tor/tasks/tor-src.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-src.yaml
@@ -19,7 +19,7 @@
     single_branch: true
   register: _repo_tor
 
-- name: Apply patches for Tor
+- name: Apply patches
   changed_when: _tor_patched.stdout_lines is search('patching file ')
   ansible.builtin.shell:
     cmd: curl -s {{ item }} | patch -p 1
@@ -29,7 +29,7 @@
   loop: "{{ tor_patches }}"
   register: _tor_patched
 
-- name: Build Tor
+- name: Build
   when: _repo_tor.changed or _tor_patched.changed
   changed_when: true
   ansible.builtin.shell:
@@ -55,7 +55,7 @@
     executable: /bin/bash
     chdir: /root/tor
 
-- name: Create Tor directories
+- name: Create directories
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
@@ -67,7 +67,7 @@
     - /var/log/tor/
 
 # needed if Tor was previously installed by a Debian package
-- name: Fix ownership of Tor directories
+- name: Fix ownership of directories
   changed_when: _rc.rc == 123
   ansible.builtin.shell:
     cmd: |-
@@ -84,7 +84,7 @@
   register: _rc
 
 # test if Tor restart is needed
-- name: Install binary of Tor
+- name: Copy Tor
   ansible.builtin.copy:
     src: /root/tor/src/app/tor
     dest: /usr/bin/
@@ -93,7 +93,7 @@
   register: _binary_tor
   notify: "Restart Tor"
 
-- name: Run install command for Tor
+- name: Run install command
   when: _binary_tor.changed
   changed_when: true
   ansible.builtin.command:
