--- a/playbooks/roles/setup_tor/tasks/firewall-server.yaml
+++ b/playbooks/roles/setup_tor/tasks/firewall-server.yaml
@@ -20,7 +20,7 @@
   ansible.builtin.cron:
     name: "start firewall"
     special_time: reboot
-    job: "{{ add_remote_service }} /root/ipv4-rules.sh start; /root/ipv6-rules.sh start"
+    job: "{{ _add_remote_service }} /root/ipv4-rules.sh start; /root/ipv6-rules.sh start"
   notify: "Restart Firewall"
 
 - name: Create cron job to save ipsets
