--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -1,11 +1,11 @@
 ---
 - name: "Ensure that tmp dir does exist: {{ tmp_dir }}"
+  run_once: true
   ansible.builtin.file:
     path: "{{ tmp_dir }}"
     state: directory
     mode: "0755"
   tags:
-    - never
     - tmpdir
 
 - name: Firewall
