introduce generic boolean node_metrics

--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -98,7 +98,7 @@
         - never
 
     - name: Metrics
-      when: metrics_port and prometheus_server
+      when: metrics_port and (node_metrics is true or snowflake_metrics is true or tor_metrics is true)
       ansible.builtin.import_tasks: metrics.yaml
       tags:
         - metrics
