--- a/playbooks/roles/setup_tor/defaults/main.yaml
+++ b/playbooks/roles/setup_tor/defaults/main.yaml
@@ -5,14 +5,12 @@ lyrebird_patches: []
 tor_git_version: "HEAD"
 tor_patches: []
 
-tor_debian_target: "" # e.g. "tor-nightly-main-bookworm", default is ansible_facts.distribution_release
+tor_debian_target: "" # e.g. "tor-nightly-main-bookworm", default is the stable package
 
 # torrc values
 tor_config_all: []
 tor_config_group: []
 tor_config_host: []
 
-tor_metrics: false
-
-# safety first
+# safe default: a Tor private bridge
 bridge_distribution: "none"
