--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,22 +5,22 @@ forks = 64
 pipelining = True
 strategy = free
 
-# timer stats (debug/profiling)
+# timer stats (for debug/profiling)
 # callbacks_enabled=ansible.posix.profile_tasks
 
 gathering = smart
 inject_facts_as_vars = false
-# keep it readable
+# keep it parseable
 fact_caching = jsonfile
 fact_caching_connection = ./.ansible_facts
 
 # reduce noise
 display_skipped_hosts = false
 
-# would clash with a grep call
+# would clash with the grep of syslog
 no_target_syslog = True
 
 remote_user = root
 
-# compression is discouraged under security aspects
+# compression is discouraged wrt security aspects
 ssh_args = -o Compression=no -o StrictHostKeyChecking=on
