remove force variable

--- a/playbooks/roles/setup/tasks/firewall.yaml
+++ b/playbooks/roles/setup/tasks/firewall.yaml
@@ -25,7 +25,7 @@
   register: _fw_old
 
 - name: Reset firewall
-  when: _fw_scripts.changed or _fw_old.changed or ((force is defined) and force)
+  when: _fw_scripts.changed or _fw_old.changed
   block:
     - name: Start firewall
       changed_when: true
