--- a/playbooks/roles/info_snowflake/tasks/uptime.yaml
+++ b/playbooks/roles/info_snowflake/tasks/uptime.yaml
@@ -11,7 +11,7 @@
       ps -eo etime,cmd --no-headers |
         grep /usr/bin/snowflake-proxy |
         grep -v grep |
-        cut -f 1,3,4 -d ' ' |
+        awk '{ print $1 }'|
         grep . ||
         echo "-"
   register: _process
