put ssh_args under the right paragraph

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -22,5 +22,5 @@ no_target_syslog = True
 
 remote_user = root
 
-# compression is discouraged wrt security aspects
+[ssh_connection]
 ssh_args = -o Compression=no -o StrictHostKeyChecking=on
