--- a/ansible.cfg
+++ b/ansible.cfg
@@ -22,5 +22,5 @@ no_target_syslog = True
 
 remote_user = root
 
-[ssh_connection]
+# compression is discouraged wrt security aspects
 ssh_args = -o Compression=no -o StrictHostKeyChecking=on
