--- a/playbooks/roles/setup_tor/tasks/validate.yaml
+++ b/playbooks/roles/setup_tor/tasks/validate.yaml
@@ -20,3 +20,11 @@
     quiet: true
     that:
       - "metrics_port != tor_port"
+
+- name: Validate node_metrics
+  when: node_metrics
+  ansible.builtin.assert:
+    quiet: true
+    that:
+      - "metrics_port is defined"
+      - "(metrics_port | int > 0) and (metrics_port | int < 2**16)"
