suffix info and setup role with _common

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,7 @@ interpreter_python = /usr/bin/python3
 
 forks = 64
 pipelining = True
-strategy = free
+strategy = ansible.builtin.free
 
 # timer stats (for debug/profiling)
 # callbacks_enabled=ansible.posix.profile_tasks
